--- a/src/MyLab.DbTest/MyLab.DbTest.csproj
+++ b/src/MyLab.DbTest/MyLab.DbTest.csproj
@@ -2,6 +2,23 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Authors>Andrey O.</Authors>
+    <Company>Andrey O.</Company>
+    <RepositoryUrl>https://github.com/ozzy-ext-mylab/db-test.git</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageProjectUrl>https://github.com/ozzy-ext-mylab/db-test</PackageProjectUrl>
+    <AssemblyVersion>1.0.1.0907</AssemblyVersion>
+    <FileVersion>1.0.1.0907</FileVersion>
+    <Version>1.0.1</Version>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="linq2db" Version="2.9.8" />
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="3.1.5" />
+    <PackageReference Include="MyLab.Db" Version="1.2.1" />
+    <PackageReference Include="xunit.abstractions" Version="2.0.3" />
+    <PackageReference Include="xunit.extensibility.core" Version="2.4.0" />
+  </ItemGroup>
 
 </Project>
